# OOP-Coursework

./: README.md  batch_test.py  coursework_report.tex  csv_summary.py  evaluate.py  generate_3d_plots.py  generate_all_figures.py  generate_feature_importance.py  generate_training_roll_analysis.py  main.py  train_model.py  visualize.py
comp0213-grasping/: README.md  pyproject.toml  requirements.txt
comp0213-grasping/data/: processed  raw
comp0213-grasping/models/: checkpoints
comp0213-grasping/scripts/: run_simulation.py
comp0213-grasping/src/: main.py
comp0213-grasping/src/agents/: planner.py
comp0213-grasping/src/data/: loader.py  preprocess.py
comp0213-grasping/src/envs/: pybullet_env.py
comp0213-grasping/src/models/: model.py
comp0213-grasping/src/training/: train.py
comp0213-grasping/src/utils/: helpers.py
comp0213-grasping/tests/: test_env.py  test_planner.py
data/: csv_detailed_summary.csv  csv_summary_stats.csv  csv_summary_stats.json  grasp_data_pr2_cuboid.csv  grasp_data_pr2_cylinder.csv  grasp_data_sdh_cuboid.csv  grasp_data_sdh_cylinder.csv  statistics.json  summary_table.csv  test_results_pr2_cuboid.csv  test_results_pr2_cylinder.csv  test_results_sdh_cuboid.csv  test_results_sdh_cylinder.csv  updated_grasp_data_pr2_cuboid_with_predictions.csv  updated_grasp_data_pr2_cylinder_with_predictions.csv  updated_grasp_data_sdh_cuboid_with_predictions.csv  updated_grasp_data_sdh_cylinder_with_predictions.csv
latex_report/: report.tex
models/: grasp_model_pr2_cuboid.pkl  grasp_model_pr2_cylinder.pkl  grasp_model_sdh_cuboid.pkl  (+9 more)
(+1 files in other folders)
