[tool.poetry]
name = "comp0213-grasping"
version = "0.1.0"
description = "A project for grasping and grasp planning in robotics using ML models and PyBullet simulation."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
pybullet = "^3.2.5"
matplotlib = "^3.4"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"